--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="col-md-4">
                 <div class="withdraw status">
                     <h5>Withdraw</h5>
-                    <h2>$ 00</h2>
+                    <h2>$ <span id="currentWithdraw">00</span></h2>
                 </div>
             </div>
             <div class="col-md-4">
@@ -81,8 +81,11 @@
         //withdraw button handler
         const withdrawBtn = document.getElementById('addWithdraw');
         withdrawBtn.addEventListener('click', function () {
-            const withdrawAmount= getInputNumbers('withdrawAmount');
-            console.log(withdrawAmount)
+            const withdrawNumber= getInputNumbers('withdrawAmount');
+
+            updateSpanText('currentWithdraw',withdrawNumber);
+            updateSpanText('currentBalance', -1* withdrawNumber);
+            document.getElementById('withdrawAmount').value = ""; 
         })
 
         function getInputNumbers(id) {
@@ -90,10 +93,10 @@
             const amountNumber = parseFloat(amount);
             return amountNumber;
         }
-        function updateSpanText(id, depositNumber) {
+        function updateSpanText(id, addNumber) {
                 const current = document.getElementById(id).innerText;
                 const currentNumber= parseFloat(current);
-                const totalAmount = currentNumber+ depositNumber;
+                const totalAmount = currentNumber+ addNumber;
                 document.getElementById(id).innerText= totalAmount;
             }
     </script>
